fix: add todays task block more readable

--- a/source/scss/components/_main.scss
+++ b/source/scss/components/_main.scss
@@ -248,10 +248,6 @@
         margin-top: 20px;
     }
 
-    &__task-list:last-child {
-        margin-top: 0;
-    }
-
     &__task-item {
         @include flexible(row, space-between, center);
         padding: 10px 30px;
